<resources>
    <string name="app_name">EdzibanPa</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="dialog_string">EdzibanPa is an easy to use food application that helps the user to plan meals by providing info about nutritional content of Ghanaian dishes</string>
    <string name="title">Set Up Your Preferences</string>
    <string name="choose">Set Up !</string>
    <string name="health_profile">Health Profile</string>
    <string name="retry">Retry</string>
    <string name="no_items">Nothing found</string>

    <string name="title_section1">About</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_about">About</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="pref_diabetic_title">Diabetic?</string>
    <string name="pref_hypertensive_title">Hypertensive?</string>
    <string name="pref_losing_weight_title">Losing Weight?</string>
    <string name="pref_recuperating_title">Recuperating?</string>
    <string name="personal_profile">Personal Profile</string>
    <string name="activity_level">Activity Level</string>
    <string name="activity_level_summary">How active are you?</string>
    <string name="label_general_rating">Overall Rating</string>
    <string name="label_diabetic_rating">Diabetic Rating</string>
    <string name="label_hypertensive_rating">Hypertensive Rating</string>
    <string name="label_weightloss_rating">Weightloss Rating</string>
    <string name="label_recuperation_rating">Recuperation Rating</string>
    <string name="label_fibre_rating">Fibre Rating</string>
    <string name="label_food_group">Food Group</string>
    <string name="label_portion_type">Portion Type</string>
    <string name="label_contains_lactose">Contains Lactose?</string>
    <string name="label_calories_per_portion">Calories per Portion</string>
    <string name="pref_lactose_intolerant_title">Lactose Intolerant?</string>
    <string name="action_refresh">Refresh</string>
    <string name="related_meals">Goes well with</string>
</resources>
