<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="8dp"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:id="@+id/meal_image"/>

            <TextView
                android:id="@+id/meal_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp" />


            <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:stretchColumns="1">
                <TableRow>
                    <TextView
                        android:text="@string/label_general_rating"
                        android:padding="3dip" />
                    <TextView
                        android:id="@+id/general_rating"
                        android:gravity="right"
                        android:padding="3dip" />
                </TableRow>
                <TableRow>
                    <TextView
                        android:text="@string/label_diabetic_rating"
                        android:padding="3dip" />
                    <TextView
                        android:id="@+id/diabetic_rating"
                        android:gravity="right"
                        android:padding="3dip" />
                </TableRow>
                <TableRow>
                    <TextView
                        android:text="@string/label_hypertensive_rating"
                        android:padding="3dip" />
                    <TextView
                        android:id="@+id/hypertensive_rating"
                        android:gravity="right"
                        android:padding="3dip" />
                </TableRow>
                <TableRow>
                    <TextView
                        android:text="@string/label_weightloss_rating"
                        android:padding="3dip" />
                    <TextView
                        android:id="@+id/weightloss_rating"
                        android:gravity="right"
                        android:padding="3dip" />
                </TableRow>
                <TableRow>
                    <TextView
                        android:text="@string/label_recuperation_rating"
                        android:padding="3dip" />
                    <TextView
                        android:id="@+id/recuperation_rating"
                        android:gravity="right"
                        android:padding="3dip" />
                </TableRow>
                <TableRow>
                    <TextView
                        android:text="@string/label_fibre_rating"
                        android:padding="3dip" />
                    <TextView
                        android:id="@+id/fibre_rating"
                        android:gravity="right"
                        android:padding="3dip" />
                </TableRow>
                <TableRow>
                    <TextView
                        android:text="@string/label_food_group"
                        android:padding="3dip" />
                    <TextView
                        android:id="@+id/food_group"
                        android:gravity="right"
                        android:padding="3dip" />
                </TableRow>
                <TableRow>
                    <TextView
                        android:text="@string/label_portion_type"
                        android:padding="3dip" />
                    <TextView
                        android:id="@+id/portion_type"
                        android:gravity="right"
                        android:padding="3dip" />
                </TableRow>
                <TableRow>
                    <TextView
                        android:text="@string/label_calories_per_portion"
                        android:padding="3dip" />
                    <TextView
                        android:id="@+id/calories_per_portion"
                        android:gravity="right"
                        android:padding="3dip" />
                </TableRow>
                <TableRow>
                    <TextView
                        android:text="@string/label_contains_lactose"
                        android:padding="3dip" />
                    <TextView
                        android:id="@+id/contains_lactose"
                        android:gravity="right"
                        android:padding="3dip" />
                </TableRow>
            </TableLayout>



            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/related_meals"
                android:padding="5dip"
                android:textStyle="bold"
                android:textSize="20dp"/>


            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/related_meals"
                android:orientation="vertical" android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </LinearLayout>

    </LinearLayout>

    </ScrollView>

    <FrameLayout
        android:visibility="gone"
        android:id="@+id/feedback_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">
        <ProgressBar
            android:id="@+id/loading_progress"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:layout_gravity="center"

            />
        <TextView
            android:id="@+id/error_message"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text=""/>
        <Button
            android:id="@+id/retry_button"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/retry"/>
    </FrameLayout>

</RelativeLayout>